Fixed overflow-x issue on mobile devices

--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@ nav {
     height: 3px;
     background-color: #e7f0f0;
     margin: 5px;
-    transition: all 0.4s ease;
+    transition: all 0.5s ease;
 }
 
 @media screen and (max-width: 1000px){
@@ -58,21 +58,22 @@ nav {
 }
 
 @media screen and (max-width: 768px){
-    body {
+    body, html {
         overflow: hidden;
         overflow-x: hidden;
+        overflow-y: hidden;
     }
     .nav-links {
         position: absolute;
-        right: 0px;
+        right: 50px;
         height: 92vh;
         top: 8vh;
         background-color: #6b8494;
         display: flex;
         flex-direction: column;
         align-items: center;
-        transform: translateX(100%);
-        transition: transform 0.5s ease-in;
+        width:0px;
+        transition: width 0.5s ease-in;
     }
     .nav-links li {
         opacity: 0;
@@ -83,7 +84,7 @@ nav {
 }
 
 .nav-active {
-    transform: translateX(0%);
+    width:50%;
 }
 
 @keyframes navLinkFade {
